compile_fail_tests/destructure/tuple_arity_too_high.rs
use const_tools::destructure;

fn main() {
    destructure!(let (a,b,c) = (1, 2));
}
